force-app/main/default/objects/ChefReview__c/ChefReview__c.object-meta.xml
<CustomObject>
    <description>This object would connect the &quot;Chef__c&quot; object .</description>
    <label>ChefReview</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>ChefReview</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChefReviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>