force-app/main/default/objects/ChefReview__c/fields/Chef__c.field-meta.xml
<CustomField>
    <fullName>Chef__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Chef</label>
    <referenceTo>Chef__c</referenceTo>
    <relationshipLabel>ChefReviews</relationshipLabel>
    <relationshipName>ChefReviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>