force-app/main/default/objects/ChefReview__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>The name of the person leaving the review</description>
    <inlineHelpText>Please enter your name.</inlineHelpText>
    <label>Customer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>