force-app/main/default/objects/ChefReview__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Chef__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Comments__c</columns>
    <columns>Rating__c</columns>
    <columns>Response__c</columns>
    <columns>Response_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>